// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MsDropdown 组件 demo 测试 正确渲染 MsDropdown children.tsx 1`] = `
<div>
  <div>
    <a
      class="ant-dropdown-trigger ms-dropdown"
    >
      自定义的children
    </a>
  </div>
</div>
`;

exports[`MsDropdown 组件 demo 测试 正确渲染 MsDropdown confirm.tsx 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <div
        class="ant-dropdown-trigger ms-dropdown ms-dropdown-trigger ms-dropdown-trigger-card"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ms-dropdown-trigger-content"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            card
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ms-trigger-arrow"
            >
              <span
                class="anticon"
                role="img"
                style="font-size: 12px; color: rgb(152, 162, 170);"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    xlink:href="#icon-xiala1"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-space-compact ant-space-compact-block ant-dropdown-button ms-dropdown"
      >
        <button
          class="ant-btn ant-btn-default ant-btn-compact-item ant-btn-compact-first-item"
          type="button"
        >
          <span>
            button
          </span>
        </button>
        <div
          class="ant-dropdown-trigger ms-dropdown-ellipsis-btn"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsDropdown 组件 demo 测试 正确渲染 MsDropdown type.tsx 1`] = `
<div>
  <div
    class="ant-space ant-space-vertical"
    style="font-size: 14px;"
  >
    <div
      class="ant-space-item"
      style="margin-bottom: 8px;"
    >
      <h1>
        文字样式
      </h1>
    </div>
    <div
      class="ant-space-item"
      style="margin-bottom: 8px;"
    >
      <div>
        放置操作的空间较小时使用
      </div>
    </div>
    <div
      class="ant-space-item"
      style="margin-bottom: 8px;"
    >
      <div
        class="ant-dropdown-trigger ms-dropdown ms-dropdown-trigger ms-dropdown-trigger-text"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ms-dropdown-trigger-content"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            text样式
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ms-trigger-arrow"
            >
              <span
                class="anticon"
                role="img"
                style="font-size: 12px; color: rgb(152, 162, 170);"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    xlink:href="#icon-xiala1"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
      style="margin-bottom: 8px;"
    >
      <h1
        style="margin-top: 20px;"
      >
        按钮样式
      </h1>
    </div>
    <div
      class="ant-space-item"
      style="margin-bottom: 8px;"
    >
      <div>
        按钮合并，功能统一在下拉项中
      </div>
    </div>
    <div
      class="ant-space-item"
      style="margin-bottom: 8px;"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="ant-dropdown-trigger ms-dropdown ms-dropdown-trigger ms-dropdown-trigger-button"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center ms-dropdown-trigger-content"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                按钮
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ms-trigger-arrow"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="font-size: 12px; color: rgb(152, 162, 170);"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        xlink:href="#icon-xiala1"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="ant-dropdown-trigger ms-dropdown ms-dropdown-trigger ms-dropdown-trigger-button ms-dropdown-trigger-button-primary"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center ms-dropdown-trigger-content"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                主色按钮
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ms-trigger-arrow"
                >
                  <span
                    class="anticon"
                    role="img"
                    style="font-size: 12px;"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        xlink:href="#icon-xiala1"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
      style="margin-bottom: 8px;"
    >
      <h1
        style="margin-top: 20px;"
      >
        容器样式
      </h1>
    </div>
    <div
      class="ant-space-item"
      style="margin-bottom: 8px;"
    >
      <div>
        大部分情况都可使用
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-dropdown-trigger ms-dropdown ms-dropdown-trigger ms-dropdown-trigger-card"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ms-dropdown-trigger-content"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            card样式
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ms-trigger-arrow"
            >
              <span
                class="anticon"
                role="img"
                style="font-size: 12px; color: rgb(152, 162, 170);"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    xlink:href="#icon-xiala1"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
